# dj-scaffold

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish-pypi.yml
dj_scaffold/: main.py
dj_scaffold.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
dj_scaffold/generators/: __init__.py  app_generator.py  project_generator.py
dj_scaffold/templates/core/: .env.example.jinja  .gitignore.jinja  Dockerfile.jinja  docker-compose.mysql.yml.jinja  docker-compose.postgres.yml.jinja  entrypoint.sh.jinja  settings.py.jinja  urls.py.jinja
dj_scaffold/templates/service_app/: __init__.py  apis.py  models.py  selectors.py  services.py  urls.py
docs/: admin-credentials.md  api-flavors.md  architecture-layout.md  cli-commands.md  database-options.md  overview.md
tests/: __init__.py  test_generators.py  test_main.py
