[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dj-scaffold-imhotep"
version = "1.0.8"
description = "Interactive enterprise scaffolding tool for Dockerized Django applications."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Imhotep-Tech", email = "imhoteptech@outlook.com" } # Feel free to change the email
]
license = { text = "MIT" }

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Framework :: Django",
]
dependencies = [
    "typer>=0.26.0",
    "questionary>=2.0.1",
    "rich>=15.0.0",
    "jinja2>=3.1.2",
    "django>=4.2.0"
]

[project.urls]
Homepage = "https://github.com/Imhotep-Tech/dj-scaffold"
Repository = "https://github.com/Imhotep-Tech/dj-scaffold"

[project.optional-dependencies]
dev = [
    "pytest>=9.1.1",
    "pytest-mock>=3.10.0"
]

[project.scripts]
dj-scaffold = "dj_scaffold.main:main"

[tool.setuptools]
package-data = { "dj_scaffold" = ["templates/**/*", "templates/**/.*"] }

[tool.setuptools.packages.find]
where = ["."]
include = ["dj_scaffold*"]
